--- a/notebooks/accessibility_analysis.ipynb
+++ b/notebooks/accessibility_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkJwlOAU8k7L0Vvko97Y3H",
+      "authorship_tag": "ABX9TyNti19+BYCMdUecDbKrLTyY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1271,12 +1271,12 @@
         "fig"
       ],
       "metadata": {
-        "id": "UHB_WKntcf8j",
-        "outputId": "e935ae37-a2aa-440e-cb1e-18863bdf77c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 700
-        }
+        },
+        "id": "UHB_WKntcf8j",
+        "outputId": "e935ae37-a2aa-440e-cb1e-18863bdf77c9"
       },
       "execution_count": 28,
       "outputs": [
@@ -1299,12 +1299,12 @@
         "POIs"
       ],
       "metadata": {
-        "id": "snkwk-u9cn05",
-        "outputId": "0d229645-3dbc-4c96-fdba-2b4cca82cccf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "snkwk-u9cn05",
+        "outputId": "0d229645-3dbc-4c96-fdba-2b4cca82cccf"
       },
       "execution_count": 31,
       "outputs": [
@@ -1748,6 +1748,18 @@
           "execution_count": 31
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## References\n",
+        "\n",
+        "1. [Measuring pedestrian accessibility using pandana](https://towardsdatascience.com/measuring-pedestrian-accessibility-97900f9e4d56)\n",
+        "2. [Public Transport Accessibility in Python](https://towardsdatascience.com/public-transport-accessibility-in-python-dbdeee99f36f)"
+      ],
+      "metadata": {
+        "id": "_i12XQjGeji1"
+      }
     }
   ]
 }
