--- a/use_cases/retail_store_analysis_app.ipynb
+++ b/use_cases/retail_store_analysis_app.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPe2rGxOnKrMKBFvBkw0lCz",
+      "authorship_tag": "ABX9TyPc9t7SCOnOpqOsfIpVRm4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4dAj9oaKN_nR",
-        "outputId": "0ee5cee5-1701-404d-f9a8-8f30810a9904"
+        "outputId": "09af5a48-9530-4798-ca74-e4f2895fe513"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.6/9.6 MB\u001b[0m \u001b[31m18.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.1/12.1 MB\u001b[0m \u001b[31m34.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m164.8/164.8 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "google-colab 1.0.0 requires pandas==2.0.3, but you have pandas 1.5.3 which is incompatible.\u001b[0m\u001b[31m\n",
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
@@ -48,45 +53,45 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 1.044s\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 0.49s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25h--2024-05-07 05:06:34--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2024-05-07 06:16:13--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet [following]\n",
-            "--2024-05-07 05:06:34--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2024-05-07 06:16:13--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 50143 (49K) [application/octet-stream]\n",
             "Saving to: ‘pop_rad_data.parquet’\n",
             "\n",
             "pop_rad_data.parque 100%[===================>]  48.97K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2024-05-07 05:06:34 (4.80 MB/s) - ‘pop_rad_data.parquet’ saved [50143/50143]\n",
+            "2024-05-07 06:16:13 (4.45 MB/s) - ‘pop_rad_data.parquet’ saved [50143/50143]\n",
             "\n",
-            "--2024-05-07 05:06:34--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet\n",
-            "Resolving github.com (github.com)... 140.82.112.3\n",
-            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
+            "--2024-05-07 06:16:14--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet\n",
+            "Resolving github.com (github.com)... 140.82.114.4\n",
+            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet [following]\n",
-            "--2024-05-07 05:06:34--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-05-07 06:16:14--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 5238 (5.1K) [application/octet-stream]\n",
+            "Length: 5902 (5.8K) [application/octet-stream]\n",
             "Saving to: ‘poi_accessibility.parquet’\n",
             "\n",
-            "poi_accessibility.p 100%[===================>]   5.12K  --.-KB/s    in 0s      \n",
+            "poi_accessibility.p 100%[===================>]   5.76K  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-05-07 05:06:34 (38.3 MB/s) - ‘poi_accessibility.parquet’ saved [5238/5238]\n",
+            "2024-05-07 06:16:14 (42.5 MB/s) - ‘poi_accessibility.parquet’ saved [5902/5902]\n",
             "\n"
           ]
         }
@@ -94,33 +99,9 @@
       "source": [
         "!pip install -q streamlit\n",
         "!npm install localtunnel\n",
-        "\n",
+        "import urllib\n",
         "!wget https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet -O pop_rad_data.parquet\n",
         "!wget https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet -O poi_accessibility.parquet"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import urllib\n",
-        "print(\"Password/Enpoint IP for localtunnel is:\",urllib.request.urlopen('https://ipv4.icanhazip.com').read().decode('utf8').strip(\"\\n\"))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5QHMrdG1cBgj",
-        "outputId": "a72f4e2e-3e4c-4aa6-facf-5a3bc766608f"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Password/Enpoint IP for localtunnel is: 34.75.45.42\n"
-          ]
-        }
       ]
     },
     {
@@ -137,6 +118,7 @@
         "st.set_page_config(page_title='Retail Store Location Analysis', page_icon='', layout=\"wide\")\n",
         "\n",
         "pop_rad_data = pd.read_parquet('pop_rad_data.parquet')\n",
+        "pop_rad_data['radiance'] = pop_rad_data['radiance'].astype(int)\n",
         "poi_accessibility = pd.read_parquet('poi_accessibility.parquet')\n",
         "\n",
         "def color_code_value(value, cmap):\n",
@@ -226,7 +208,7 @@
         "\n",
         "def create_deck(hex_layer, tooltip):\n",
         "    x, y = (77.06463665845695, 28.437398083125167)\n",
-        "    view_state = pdk.ViewState(latitude=y, longitude=x, zoom=12, bearing=0, pitch=15)\n",
+        "    view_state = pdk.ViewState(latitude=y, longitude=x, zoom=12, bearing=0, pitch=45)\n",
         "    # Render\n",
         "    r = pdk.Deck(layers=[hex_layer], initial_view_state=view_state, tooltip=tooltip)\n",
         "\n",
@@ -243,16 +225,16 @@
         "hex_layer, tooltip = options[parameter]\n",
         "deck = create_deck(hex_layer, tooltip)\n",
         "\n",
-        "st.pydeck_chart(deck, use_container_width=True)"
+        "st.pydeck_chart(deck, use_container_width=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ob7lnzCEONX7",
-        "outputId": "a14eb07f-7d35-45cb-c413-805f2fbd07de"
+        "outputId": "4a54b3a0-58ae-467e-c7d7-c75823b8a36d"
       },
-      "execution_count": 37,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,6 +248,9 @@
     {
       "cell_type": "code",
       "source": [
+        "password = urllib.request.urlopen('https://ipv4.icanhazip.com').read().decode('utf8').strip(\"\\n\")\n",
+        "print(\"Password/Enpoint IP for localtunnel is:\", password)\n",
+        "\n",
         "!streamlit run /content/app.py &>/content/logs.txt &\n",
         "!npx localtunnel --port 8501"
       ],
@@ -274,16 +259,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LMPIgWZhOZ6P",
-        "outputId": "1d81849a-177c-4f18-b20f-b787f9989170"
+        "outputId": "1ed17e11-2fef-45eb-eca0-d0ffe4e323b3"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K\u001b[?25hnpx: installed 22 in 3.106s\n",
-            "your url is: https://sad-otters-slide.loca.lt\n"
+            "Password/Enpoint IP for localtunnel is: 34.75.45.42\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.896s\n",
+            "your url is: https://tame-years-battle.loca.lt\n",
+            "^C\n"
           ]
         }
       ]
