--- a/use_cases/retail_store_analysis_app.ipynb
+++ b/use_cases/retail_store_analysis_app.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl6OD2i1GZB6m9axxBkYLE",
+      "authorship_tag": "ABX9TyMmN4awkjk9FV78mQM6Pvlj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,56 +37,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4dAj9oaKN_nR",
-        "outputId": "41b81962-fafb-4cc8-fae3-9aa76655e545"
+        "outputId": "9b6f4725-e1e3-4be2-bdf9-07c7774e12c7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m34.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.3/207.3 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m42.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m83.0/83.0 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.531s\n",
+            "+ localtunnel@2.0.2\n",
+            "added 22 packages from 22 contributors and audited 22 packages in 3.077s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
-            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25h--2024-05-07 13:58:13--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
+            "\u001b[K\u001b[?25h--2024-05-07 16:57:18--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet [following]\n",
-            "--2024-05-07 13:58:13--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "--2024-05-07 16:57:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 50143 (49K) [application/octet-stream]\n",
             "Saving to: ‘pop_rad_data.parquet’\n",
             "\n",
-            "pop_rad_data.parque 100%[===================>]  48.97K  --.-KB/s    in 0.04s   \n",
+            "pop_rad_data.parque 100%[===================>]  48.97K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2024-05-07 13:58:13 (1.27 MB/s) - ‘pop_rad_data.parquet’ saved [50143/50143]\n",
+            "2024-05-07 16:57:19 (4.51 MB/s) - ‘pop_rad_data.parquet’ saved [50143/50143]\n",
             "\n",
-            "--2024-05-07 13:58:14--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
+            "--2024-05-07 16:57:19--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet [following]\n",
-            "--2024-05-07 13:58:14--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet\n",
+            "--2024-05-07 16:57:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -95,18 +101,18 @@
             "\n",
             "poi_accessibility.p 100%[===================>]   5.76K  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-05-07 13:58:14 (27.4 MB/s) - ‘poi_accessibility.parquet’ saved [5902/5902]\n",
+            "2024-05-07 16:57:19 (32.8 MB/s) - ‘poi_accessibility.parquet’ saved [5902/5902]\n",
             "\n",
-            "--2024-05-07 13:58:15--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/style.css\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2024-05-07 16:57:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/style.css\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 252 [text/plain]\n",
             "Saving to: ‘style.css’\n",
             "\n",
             "style.css           100%[===================>]     252  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-05-07 13:58:15 (4.48 MB/s) - ‘style.css’ saved [252/252]\n",
+            "2024-05-07 16:57:19 (4.78 MB/s) - ‘style.css’ saved [252/252]\n",
             "\n"
           ]
         }
@@ -168,7 +174,13 @@
         "    - Higher radiance values indicate brighter sources of light (e.g., urban areas, artificial lighting).\n",
         "    - Lower radiance values correspond to darker regions with less light\n",
         "    - Resolution = 463.83 meters, radiance values are in Nano Watts per area\n",
-        "\n"
+        "\n",
+        "\n",
+        "### Suitability Score\n",
+        "\n",
+        "- After calculating all the spatial values, they were normalized between 0-1 values\n",
+        "- A suitability score was derived by all the normalized values\n",
+        "- The score was scaled to 0-100 % values, 0 being unsuitable and 100 being favourable for opening a retail store\n"
       ],
       "metadata": {
         "id": "KQhkPtaDZKGS"
@@ -225,12 +237,8 @@
         "            padding-top: 20px;\n",
         "        }\n",
         "\n",
-        "        #root > div:nth-child(1) > div.withScreencast > div > div > div > section.main.st-emotion-cache-bm2z3a.ea3mdgi8 > div.block-container.st-emotion-cache-1jicfl2.ea3mdgi5 > div > div > div > div:nth-child(4) > div > div {\n",
-        "            height:1000px;\n",
-        "        }\n",
-        "\n",
         "        .st-emotion-cache-1v0mbdj {\n",
-        "            width: 25rem;\n",
+        "            width: 20rem;\n",
         "        }\n",
         "    </style>\n",
         "\"\"\"\n",
@@ -363,23 +371,64 @@
         "    - [Analysis Notebook](https://github.com/kavyajeetbora/modern_geospatial_stack/blob/master/use_cases/Location_Intelligence.ipynb)\n",
         "'''\n",
         "\n",
+        "accessibility_desc = '''\n",
+        "### Public Transport Accessibility\n",
+        "\n",
+        "- To calculate the accessibility to the public transport hubs, `pandana` python library was used\n",
+        "-  Pandana focuses on analyzing networks (e.g., transportation networks, road networks, etc.).\n",
+        "- It calculates metrics related to travel accessibility, such as how easily one can reach different parts of a network\n",
+        "- in this case, OSM features with tag: `public_transport` and `'highway': ['primary', 'secondary', 'tertiary']`\n",
+        "- [Analysis Notebook](https://github.com/kavyajeetbora/modern_geospatial_stack/blob/master/use_cases/Location_Intelligence.ipynb)\n",
+        "'''\n",
+        "\n",
+        "population_density = '''\n",
+        "### Population Density\n",
+        "\n",
+        "- Data used to estimate the population density spaitally: [WorldPop Global Project Population Data](https://developers.google.com/earth-engine/datasets/catalog/WorldPop_GP_100m_pop)\n",
+        "- Estimates the population count per 100m x 100m grid\n",
+        "- WorldPop combines census data, geospatial information, and modeling techniques to estimate population counts at various spatial scales. These estimates are valuable for decision-makers, researchers, and humanitarian efforts worldwide\n",
+        "- [How population is estimated ?](https://www.worldpop.org/methods/populations/)\n",
+        "- [Analysis notebook](https://github.com/kavyajeetbora/CityHealthMonitor/blob/master/development/population_estimate.ipynb)\n",
+        "'''\n",
+        "radiance_desc = '''\n",
+        "### Radiance Values\n",
+        "\n",
+        "- Dataset used: [VIIRS Nighttime Data](https://developers.google.com/earth-engine/datasets/catalog/NOAA_VIIRS_DNB_MONTHLY_V1_VCMCFG)\n",
+        "- Understanding VIIRS DNB Data:\n",
+        "    - The VIIRS DNB captures radiance values in the visible and near-infrared spectrum during both day and night.\n",
+        "    - These radiance values represent the amount of light detected by the sensor at nighttime.\n",
+        "    - Higher radiance values indicate brighter sources of light (e.g., urban areas, artificial lighting).\n",
+        "    - Lower radiance values correspond to darker regions with less light\n",
+        "    - Resolution = 463.83 meters, radiance values are in Nano Watts per area\n",
+        "- [Analysis notebook](https://github.com/kavyajeetbora/CityHealthMonitor/blob/master/development/population_estimate.ipynb)\n",
+        "'''\n",
+        "\n",
+        "conclusion = '''\n",
+        "### Suitability Score\n",
+        "\n",
+        "- After calculating all the spatial values, they were normalized between 0-1 values\n",
+        "- A suitability score was derived by all the normalized values\n",
+        "- The score was scaled to 0-100 % values, 0 being unsuitable and 100 being favourable for opening a retail store\n",
+        "'''\n",
+        "\n",
+        "\n",
         "## Generate the dropdown\n",
         "\n",
         "options = {\n",
-        "    \"Density of Amenities\": (poi_density_layer, generate_tooltip(\"Amenities Count: {poi_count}\"), poi_density_legend),\n",
-        "    \"Public Transport Accessibility\": (accessibility_layer, generate_tooltip(\"Pedestrian Accessibility: {time_min} mins\"), accessibility_legend),\n",
+        "    \"Density of Amenities\": (poi_density_layer, generate_tooltip(\"Amenities Count: {poi_count}\"), poi_density_legend, poi_desc),\n",
+        "    \"Public Transport Accessibility\": (accessibility_layer, generate_tooltip(\"Pedestrian Accessibility: {time_min} mins\"), accessibility_legend, accessibility_desc),\n",
         "    \"Population Density\": (pop_age_sex_layer, generate_tooltip('''Population: {population} <br>\n",
         "        Male: {sum_male} % <br>\n",
         "        Female: {sum_female} %\n",
-        "        '''), pop_age_sex_legend),\n",
-        "    \"Nighttime Lights\": (rad_layer, generate_tooltip(\"Radiance: {radiance}\"),rad_legend),\n",
-        "    \"Suitability Score\": (score_layer, generate_tooltip(\"Suitability Score: {suitablity_score} %\"),score_legend)\n",
+        "        '''), pop_age_sex_legend, population_density),\n",
+        "    \"Nighttime Lights\": (rad_layer, generate_tooltip(\"Radiance: {radiance}\"),rad_legend, radiance_desc),\n",
+        "    \"Suitability Score\": (score_layer, generate_tooltip(\"Suitability Score: {suitablity_score} %\"),score_legend, conclusion)\n",
         "\n",
         "}\n",
         "\n",
         "def create_deck(hex_layer, tooltip):\n",
         "    x, y = (77.06463665845695, 28.437398083125167)\n",
-        "    view_state = pdk.ViewState(latitude=y, longitude=x, zoom=12, bearing=0, pitch=45)\n",
+        "    view_state = pdk.ViewState(latitude=y, longitude=x, zoom=11, bearing=0, pitch=45)\n",
         "    # Render\n",
         "    r = pdk.Deck(layers=[hex_layer], initial_view_state=view_state, tooltip=tooltip)\n",
         "\n",
@@ -395,7 +444,7 @@
         "    options=options.keys(),\n",
         ")\n",
         "\n",
-        "hex_layer, tooltip, legend = options[parameter]\n",
+        "hex_layer, tooltip, legend, desc = options[parameter]\n",
         "\n",
         "st.header(parameter)\n",
         "deck = create_deck(hex_layer, tooltip)\n",
@@ -406,16 +455,17 @@
         "    st.pydeck_chart(deck, use_container_width=True)\n",
         "    st.pyplot(legend,use_container_width=False)\n",
         "\n",
-        "with col2:\n"
+        "with col2:\n",
+        "    st.markdown(desc, unsafe_allow_html=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ob7lnzCEONX7",
-        "outputId": "83efcf92-1ed1-4625-d520-ef3a2525f0db"
+        "outputId": "d448e338-495e-47e4-98fb-dd68b4280da8"
       },
-      "execution_count": 19,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LMPIgWZhOZ6P",
-        "outputId": "1842fc9b-7282-4735-dd9f-f55163d8af9c"
+        "outputId": "62747b0c-9e58-40c1-b192-aba114ddd2c3"
       },
       "execution_count": null,
       "outputs": [
@@ -457,9 +507,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Password/Enpoint IP for localtunnel is: 35.194.155.84\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.329s\n",
-            "your url is: https://crazy-points-warn.loca.lt\n"
+            "Password/Enpoint IP for localtunnel is: 34.23.75.38\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.789s\n",
+            "your url is: https://dirty-bottles-change.loca.lt\n"
           ]
         }
       ]
