Add - adjusted the application layout

--- a/use_cases/retail_store_analysis_app.ipynb
+++ b/use_cases/retail_store_analysis_app.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLG0gSNMmnCY9Zwsp7isRw",
+      "authorship_tag": "ABX9TyPKnxvdax2QEJbECxS3Id+y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,26 +37,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4dAj9oaKN_nR",
-        "outputId": "9b6f4725-e1e3-4be2-bdf9-07c7774e12c7"
+        "outputId": "9d224c19-0e4a-4b86-b409-be1eff8220bf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m34.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.3/207.3 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m42.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m83.0/83.0 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m36.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.3/207.3 kB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m38.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m83.0/83.0 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
@@ -64,35 +64,35 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "+ localtunnel@2.0.2\n",
-            "added 22 packages from 22 contributors and audited 22 packages in 3.077s\n",
+            "added 22 packages from 22 contributors and audited 22 packages in 1.658s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25h--2024-05-07 16:57:18--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet\n",
-            "Resolving github.com (github.com)... 140.82.112.3\n",
-            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
+            "\u001b[K\u001b[?25h--2024-05-08 14:25:17--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/pop_rad_data.parquet\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet [following]\n",
-            "--2024-05-07 16:57:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2024-05-08 14:25:18--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/pop_rad_data.parquet\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 50143 (49K) [application/octet-stream]\n",
             "Saving to: ‘pop_rad_data.parquet’\n",
             "\n",
-            "pop_rad_data.parque 100%[===================>]  48.97K  --.-KB/s    in 0.01s   \n",
+            "pop_rad_data.parque 100%[===================>]  48.97K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2024-05-07 16:57:19 (4.51 MB/s) - ‘pop_rad_data.parquet’ saved [50143/50143]\n",
+            "2024-05-08 14:25:18 (1.20 MB/s) - ‘pop_rad_data.parquet’ saved [50143/50143]\n",
             "\n",
-            "--2024-05-07 16:57:19--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2024-05-08 14:25:18--  https://github.com/kavyajeetbora/modern_geospatial_stack/raw/master/use_cases/poi_accessibility.parquet\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet [following]\n",
-            "--2024-05-07 16:57:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet\n",
+            "--2024-05-08 14:25:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/poi_accessibility.parquet\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -101,18 +101,18 @@
             "\n",
             "poi_accessibility.p 100%[===================>]   5.76K  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-05-07 16:57:19 (32.8 MB/s) - ‘poi_accessibility.parquet’ saved [5902/5902]\n",
+            "2024-05-08 14:25:19 (41.8 MB/s) - ‘poi_accessibility.parquet’ saved [5902/5902]\n",
             "\n",
-            "--2024-05-07 16:57:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/style.css\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2024-05-08 14:25:19--  https://raw.githubusercontent.com/kavyajeetbora/modern_geospatial_stack/master/use_cases/style.css\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 252 [text/plain]\n",
             "Saving to: ‘style.css’\n",
             "\n",
             "style.css           100%[===================>]     252  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-05-07 16:57:19 (4.78 MB/s) - ‘style.css’ saved [252/252]\n",
+            "2024-05-08 14:25:20 (15.6 MB/s) - ‘style.css’ saved [252/252]\n",
             "\n"
           ]
         }
@@ -180,7 +180,12 @@
         "\n",
         "- After calculating all the spatial values, they were normalized between 0-1 values\n",
         "- A suitability score was derived by all the normalized values\n",
-        "- The score was scaled to 0-100 % values, 0 being unsuitable and 100 being favourable for opening a retail store\n"
+        "- The score was scaled to 0-100 % values, 0 being unsuitable and 100 being favourable for opening a retail store\n",
+        "\n",
+        "\n",
+        "**Futher Work**\n",
+        "- Include real-time footfall data from telecom network providers\n",
+        "-"
       ],
       "metadata": {
         "id": "KQhkPtaDZKGS"
@@ -239,6 +244,9 @@
         "\n",
         "        .st-emotion-cache-1v0mbdj {\n",
         "            width: 20rem;\n",
+        "        }\n",
+        "        #view-default-view > div:nth-child(1) {\n",
+        "            width: 100%;\n",
         "        }\n",
         "    </style>\n",
         "\"\"\"\n",
@@ -338,7 +346,8 @@
         "accessibility_legend = return_legend(accessibility['time_min'],cmap, units='Public Transport Accessibility')\n",
         "\n",
         "## suitability score\n",
-        "score = colormap_dataframe(df[['hex8', 'suitablity_score']], value_col='suitablity_score', cmap=colormaps['YlOrRd'])\n",
+        "cmap=colormaps['RdYlGn']\n",
+        "score = colormap_dataframe(df[['hex8', 'suitablity_score']], value_col='suitablity_score', cmap=cmap)\n",
         "score_layer = create_h3_hex_layer(score, hex_col)\n",
         "score_legend = return_legend(score['suitablity_score'],cmap, units='Retail Location Suitability Score')\n",
         "\n",
@@ -439,23 +448,23 @@
         "st.header(parameter)\n",
         "deck = create_deck(hex_layer, tooltip)\n",
         "\n",
+        "\n",
+        "st.pydeck_chart(deck, use_container_width=True)\n",
+        "\n",
         "col1, col2 = st.columns(2)\n",
-        "\n",
         "with col1:\n",
-        "    st.pydeck_chart(deck, use_container_width=True)\n",
-        "    st.pyplot(legend,use_container_width=False)\n",
-        "\n",
+        "    st.markdown(desc, unsafe_allow_html=False)\n",
         "with col2:\n",
-        "    st.markdown(desc, unsafe_allow_html=False)"
+        "    st.pyplot(legend, use_container_width=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ob7lnzCEONX7",
-        "outputId": "d448e338-495e-47e4-98fb-dd68b4280da8"
+        "outputId": "643d1b71-689a-4896-c06e-f1650f06965b"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +498,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LMPIgWZhOZ6P",
-        "outputId": "62747b0c-9e58-40c1-b192-aba114ddd2c3"
+        "outputId": "ba2ddcb6-ec93-48da-dec5-ab283528796b"
       },
       "execution_count": null,
       "outputs": [
@@ -497,9 +506,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Password/Enpoint IP for localtunnel is: 34.23.75.38\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.789s\n",
-            "your url is: https://dirty-bottles-change.loca.lt\n"
+            "Password/Enpoint IP for localtunnel is: 35.236.152.68\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.043s\n",
+            "your url is: https://vast-cars-work.loca.lt\n"
           ]
         }
       ]
