Add - further work section in the notebook

--- a/use_cases/retail_store_analysis_app.ipynb
+++ b/use_cases/retail_store_analysis_app.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKnxvdax2QEJbECxS3Id+y",
+      "authorship_tag": "ABX9TyOwkOdbTLhFvyH72qtgrqHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -408,6 +408,10 @@
         "- After calculating all the spatial values, they were normalized between 0-1 values\n",
         "- A suitability score was derived by all the normalized values\n",
         "- The score was scaled to 0-100 % values, 0 being unsuitable and 100 being favourable for opening a retail store\n",
+        "\n",
+        "**Further work**\n",
+        "- Include the real estate prices for commercial properties like 99acres.com, magicbricks etc. That can help in deciding the retail location\n",
+        "- Footfall data can play a crucial role in determining the optimal location for a retail store. [placer.ai](https://www.placer.ai/)\n",
         "'''\n",
         "\n",
         "\n",
